# Lol-accelerate

./: .gitignore  .travis.yml  README.md  lol-accelerate.cabal  stack.yaml
Crypto/Lol/Cyclotomic/Tensor/: Accelerate.hs
Crypto/Lol/Cyclotomic/Tensor/Accelerate/: AT.hs  Backend.hs  CRT.hs  Common.hs  Dec.hs  Dispatch.hs  Extension.hs  GL.hs  Instances.hs  Matrix.hs  Memo.hs  Pow.hs  Prim.hs  TH.hs
Data/Array/Accelerate/Crypto/Lol/: CRTrans.hs  Reflects.hs
Data/Array/Accelerate/Crypto/Lol/Types/: Complex.hs  ZqBasic.hs
benchmarks/: BenchAppsAccMain.hs  BenchLolAccMain.hs  Main.hs
cbits/: instances.h
examples/: HomomPRFAccMain.hs  KHPRFAccMain.hs  SHEAccMain.hs
tests/: Main.hs  TestAppsAccMain.hs  TestLolAccMain.hs
