name:                 lol-accelerate
version:              0.1.0.0
synopsis:             Accelerate backend for the Λ ○ λ (Lol) lattice-cryptography library
description:
  This package provides an Accelerate backend for computing with the Λ ○ λ (Lol)
  general-purpose library for ring-based cryptography. For more information,
  see:
  .
  * Lol: <https://hackage.haskell.org/package/lol>
  .
  * Accelerate: <https://hackage.haskell.org/package/accelerate>

homepage:             https://github.com/tmcdonell/Lol-accelerate
license:              BSD3
license-file:         LICENSE
author:               Trevor L. McDonell
maintainer:           Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
copyright:            Copyright (c) [2016]. Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
category:             Crypto
build-type:           Simple
cabal-version:        >= 1.10

extra-source-files:
  README.md

flag cuda
  description: Enable the CUDA backend for NVIDIA GPUs
  default:     False

flag llvm-cpu
  description: Enable the LLVM backend for Multicore CPUs
  default:     False

flag llvm-gpu
  description: Enable the LLVM backend for NIVDIA GPUs
  default:     False


library
  default-language:   Haskell2010
  build-depends:
      base                              >= 4.7 && < 4.9
    , accelerate                        >= 0.16
    , fclabels                          >= 2.0
    , lol                               >= 0.2
    , numeric-prelude                   >= 0.4.2
    , numeric-prelude-accelerate        >= 0.1
    , singletons                        >= 1.1.2.1

  ghc-options:        -Wall

  -- exposed-modules:
  other-modules:
      Data.Array.Accelerate.Crypto.Lol.Types.Complex

      Crypto.Lol.Cyclotomic.Tensor.Accelerate.CRT
      Crypto.Lol.Cyclotomic.Tensor.Accelerate.Common
      Crypto.Lol.Cyclotomic.Tensor.Accelerate.GL

      Crypto.Lol.Cyclotomic.Tensor.Accelerate.Backend

  if flag(cuda)
    cpp-options:      -DACCELERATE_CUDA_BACKEND
    build-depends:
        accelerate-cuda                 >= 0.16

  if flag(llvm-cpu)
    cpp-options:      -DACCELERATE_LLVM_NATIVE_BACKEND
    build-depends:
        accelerate-llvm-native          >= 0.16

  if flag(llvm-gpu)
    cpp-options:      -DACCELERATE_LLVM_PTX_BACKEND
    build-depends:
        accelerate-llvm-ptx             >= 0.16


source-repository head
  type:               git
  location:           https://github.com/tmcdonell/lol-accelerate

-- vim: nospell

